compiler/test/fail_compilation/issue20432.d
struct ExistenceChecker
{
    bool delegate() checkExistenceFn;
}

ExistenceChecker makeExistenceChecker(string gemName)
{
    return ExistenceChecker(() => gemName == "dummy");
}

enum checker = makeExistenceChecker("test");
